--- a/less/nav.less
+++ b/less/nav.less
@@ -1,22 +1,116 @@
 
 /*  apply a natural box layout model to all elements  */
+
+/*  apply a natural box layout model to all elements  */
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
-/*------------Search Bar ------------------------------------------*/
+
+#hamburgerBtn { display: none; } /* hide the navigation button by default */
+
+@media only screen and (max-width:32rem) {
+
+/* Navigation Button  -------------------------------------------------------- */
+    body { padding-top: 50px; }
+    
+    nav {
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 46px;
+        background-color: @PrimaryColor; 
+        z-index: 9999;
+    }
+
+	#hamburgerBtn {
+		display: block;
+		width: 7rem;
+        height: 2.75rem;
+		background-image: url('../images/menuOpenWhite.png');
+		background-color: rgba(0,0,0,0.1);
+		background-position: 2vw center;
+		background-repeat: no-repeat;
+		border: 0 none;
+	}
+	#hamburgerBtn.open {
+		background: url('../images/menuCloseWhite.png');
+        background-position: 2vw center;
+		background-repeat: no-repeat;
+	}
+
+/* Navigation Bar -------------------------------------------------------- */
+
+	
+	#primaryNav {
+        height: 0;
+        overflow: hidden;
+		width: 20rem;
+		background-color: @PrimaryColor; /* change the menu color */
+		margin: 0;
+		padding: 0;
+		z-index: 998;
+        font-family: Verdana;
+        font-weight: normal;
+	}
+    #primaryNav li.active a{background-color: rgba(0,0,0,0.25);}
+	#primaryNav li a {
+		display: block;
+		width: 100%;
+		padding: .75rem 2vw;
+		font-size: 14px;
+		text-shadow: -1px -1px 0 rgba(0,0,0,.15);
+		color: white;
+		text-decoration: none;
+		border-top: 1px solid rgba(0,0,0,.2);
+	}
+	#primaryNav li a:hover {
+		background-color: rgba(0,0,0,.5);
+	}
+
+	/* Toggle the navigation bar to expand down  */
+	#primaryNav.open {height: auto;}
+
+	/* Submenus – optional .parent class indicates dropdowns */
+	#primaryNav > li:hover > a {background: rgba(0,0,0,.5);}
+	#primaryNav li.parent > a:after {
+        font-size: .75rem;
+		content: "\25BC";
+		color: rgba(255,255,255,.5);
+		float: right;
+	}
+	#primaryNav li.parent > a:hover {
+		background: rgba(0,0,0,.75);
+	}
+    /*hide the sub menu items by default*/
+	#primaryNav li ul {
+		display: none;
+		background: rgba(0,0,0,.3);
+		padding: 0;
+	}
+	#primaryNav li ul a {
+		border-top: solid 1px rgba(0,0,0,0.2);
+		font-size: 12px;
+		padding: 10px 5%;
+		font-weight: normal;
+	}
+	#primaryNav li:hover ul {display: block;}
+
 .searchBox{
 	background-color: @PrimaryColor;
-
-  align-self: center;
+  float: right;
+  position: absolute;
+        top:0;
+        right: .2rem;
   
-  input[type=text] {
-    padding: 6px;
+  input[type=search] {
 		font-size: 1rem;
 		border: none;
 		margin-right: -4px;
 		width: 80px;
-		border-radius: 5px 0 0 5px;
+    border-radius: 5px 0 0 5px;
+   height: 40px;
 	}
 
-	input[type=text]:focus{
+	input[type=search]:focus{
 		width: 80%;
 	}
 
@@ -27,38 +121,30 @@
 		font-size: 1rem;
 		border: none;
 		cursor: pointer;
-    margin: 0;
-    margin-right: 16px;
+   height: 40px;
 	}//button
 
 	button:hover{
 		background-color:@DkAccent;
-
-	
 	}
 }//searchBox
 
-
-
+} /* End Mobile Styles */
 
 
 /* Navigation for Large Screens  -------------------------------------------------------- */
 
-.navBackground{
-  background-color: @PrimaryColor;
-}
 
+@media (min-width: 33rem){
 .navBar{
-  display:flex;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
+	background-color: @PrimaryColor;
 }
 
 
 nav{
-  width: 50%;
-	background-color: @PrimaryColor;
+  max-width: 1200px;
+  margin: 0 auto;
+
 
  ul li.active a { 
 		color: @LtAccent;
@@ -67,9 +153,12 @@ nav{
 ul{
   margin-left: 2%;
   border-left: 1px solid rgba(0,0,0,.2);
-  display: flex;
+  display: block;
+  float:left;
 }
-
+ul > li{
+  float:left;
+}
 ul li a{
   display: block;
   border: none;
@@ -89,17 +178,16 @@ ul li a:hover {
 }
 
 ul li ul {/* rules for sub menu items*/
-  z-index: 99;
+  z-index: 999;
   position: absolute;
   background-color: darken(@PrimaryColor, 10%);
   left: -999em; /*pushes the menu way off to the side */
   width: 10em;
-  display:flex;
-  flex-direction: column;
+
 }
 
 ul li ul li{ /*overides the float and line from the parent ul*/
-
+  display:block;
   border-right: none;
   border-top: solid 1px rgba(0,0,0,.2);
 }
@@ -108,141 +196,43 @@ ul li:hover ul { /*this displays the menus as drop downs */
   left: auto;
   margin-left: 0;
 }
+
+.searchBox{
+	background-color: @PrimaryColor;
+  float: right;
+padding-right: 2%;
+  
+  input[type=search] {
+		font-size: 1rem;
+		border: none;
+		margin-right: -4px;
+		width: 80px;
+    border-radius: 5px 0 0 5px;
+   height: 29px;
+	}
+
+	input[type=search]:focus{
+		width: 80%;
+	}
+
+	button{
+		border-radius: 0 5px 5px 0;
+		background-color: @SecondaryColor;
+		padding: 6px 10px;
+		font-size: 1rem;
+		border: none;
+		cursor: pointer;
+   height: 29px;
+	}//button
+
+	button:hover{
+		background-color:@DkAccent;
+	}
+}//searchBox
 }//end nav
 
 
-
-#hamburgerBtn { display:none;}
-
-@media only screen and (max-width: 32rem){
-
-  /*Navigation Button ----------------------------------------------------------*/
-  .navBackground{
-    background-color: @PrimaryColor;
-    width: 100%;
-  }
-
-  .navBar{
-    position: absolute;
-    top: 0;
-    background-color: @PrimaryColor;
-    display: flex;
-    justify-content: space-evenly;
-
-  }
-  
-  nav{
-    width: 40%;
-    background-color: @PrimaryColor;
-    z-index: 1;
-  }
-
-  #hamburgerBtn{
-    display: block;
-    width: 7rem;
-    height: 2.75rem;
-    background-image: url(../images/menuOpenWhite.png);
-    background-color: rgba(0,0,0,0.1);
-    background-position: 2vw center;
-    background-repeat: no-repeat;
-    border: 0 none;
-  }
-
-  #hamburgerBtn.open{
-    background-image: url(../images/menuCloseWhite.png);
-    background-position: 2vw center;
-    background-repeat: no-repeat;
-  }
-
-  /* Navigation Bar -------------------------------------------------------------*/
-
-ul{
-  flex-direction: column;
-}
-
-
-
-  #primaryNav{
-    height: 0;
-    overflow: hidden;
-    width: 20rem;
-    background-color: @PrimaryColor;
-    margin: 0;
-    padding: 0;
-    z-index: 998;
-    font-weight: normal;
-  }
-
-  #primaryNav li.active a{background-color: darken(@PrimaryColor, 20%);}
-  #primaryNav li a {
-    display: block;
-    width: 100%;
-    padding: .75rem 2vw;
-    font-size: 14px;
-    text-shadow: -1px -1px 0 rgba(0,0,0,.15);
-    color: white;
-    text-decoration: none;
-    border-top: 1px solid rgba(0,0,0,.2);
-  }
-
-  #primaryNav li a:hover{
-    background-color: rgba(0,0,0,.5);
-  }
-
-  /* Toggle the navigation bar to expand down */
-  #primaryNav.open {height: auto;}
-
-  /* Submenus --------------------------------------*/
-  #primaryNav > li:hover > a {background: rgba(0,0,0,.5);}
-  #primaryNav li.parent > a:after {
-    font-size: .75rem;
-    content: "\25BC";
-    color: rgba(255,255,255,.5);
-   float:right;
-
-  }
-
-  #primaryNav li.parent > a:hover {
-    background: rgba(0,0,0,.75);
-  }
-
-
-  /* Hide the sub menu items by default ---------------------*/
-  #primaryNav li ul {
-    display: none;
-    background: rgba(0,0,0,.3);
-    padding: 0;
-  }
-  #primaryNav li ul a{
-    border-top: solid 1px rgba(0,0,0,.2);
-    font-size: 12px;
-    padding: 10px 5%;
-    font-weight: normal;
-  }
-  #primaryNav li:hover ul {display:block;
-    position: relative;
-  }
-
-
-  .searchBox{
-    width: 60%;
-  
-    justify-self: space-between;
-
-    input{
-      margin-left: 30%;
-    }
-
-    input[type=text]:focus{
-      width: 50%;
-    }
-
-  }
- 
-}//media small screens
-
-
-
+}//end media
 /* Clearfix: force and Element not to collapse --------*/
 
 .clearfix:after{
