--- a/css/main.css
+++ b/css/main.css
@@ -668,6 +668,9 @@ form input {
     width: 96%;
   }
 }
+.required {
+  border-color: #fe5b35;
+}
 .submit {
   border: none;
   background-color: #fe5b35;
@@ -686,7 +689,7 @@ form input {
   padding-bottom: 4%;
 }
 .agents h4 {
-  color: #36454f;
+  color: #fe5b35;
   font-size: 1.5rem;
   font-weight: bold;
   padding-bottom: 2%;
