--- a/less/agents.less
+++ b/less/agents.less
@@ -3,7 +3,7 @@
       padding-bottom: 4%;
   }
 h4{
-    color: @PrimaryColor;
+    color: @LtAccent;
     font-size: 1.5rem;
     font-weight: bold;
     padding-bottom:2%;
