--- a/less/_landing.less
+++ b/less/_landing.less
@@ -8,7 +8,7 @@
     }//myslider
     
     h2{
-        color:@DkAccent;
+        color:red;
         font-size: 2rem; 
         text-align: center;
     }
