--- a/less/_variables.less
+++ b/less/_variables.less
@@ -1,5 +1,5 @@
 // variables
-@PrimaryColor:  #36454f;
+@PrimaryColor:  red;
 @SecondaryColor: #f9f4f5;
 @LtAccent: #fe5b35;
 @DkAccent: #ffae42;
@@ -7,6 +7,5 @@
 @tablet: ~"(max-width:  64rem)";
 @mobile: ~"(max-width: 32rem)";
 @desktop: ~"(min-width: 65rem)";
-
 
 
